--- a/index.html
+++ b/index.html
@@ -125,9 +125,8 @@ border: 1px solid red;
     <ul class="mainnav">
       <li class="lispecial"><a href="#s1">About Me</a></li>
       <li class="lispecial"><a href="#s2">Projects</a></li>
-      <li class="lispecial"><a href="#s3">Experience</a></li>
-      <li class="lispecial"><a href="#s4">Resume</a></li>
-      <li class="lispecial"><a href="#s5">Contact Me</a></li>
+      <li class="lispecial"><a href="#s3">Skills and Resume</a></li>
+      <li class="lispecial"><a href="#s4">Contact Me</a></li>
     </ul>
  
     <h1>Jason Chiu</h1>
@@ -154,73 +153,25 @@ border: 1px solid red;
 
 
 <header>
-<h2 id="s2">My Projects</h2>
-<h3>Click on each project to learn more!</h3>
+<h2 id="s2">Projects</h2>
 </header>
-<p>
-<br> TAO Website Design
-<br> HackUCI 
-<br> Project 365
-<br> Temple Zal
-<br> 
-</p>
+
 
 <br>
 <br>
 <br>
 
 <header>
-<h2 id="s3">Work Experiences, Organizations and Activities</h2>
-<h3>Here is a list of work experiences and organizations I have been a part of!</h3>
+<h2 id="s3">Skills and Resume</h2>
 </header>
-<p>
 
-
-<ul>
-<li>Calplug - Research Assistant/Animator</li> <br>
-<p>I joined Calplug, the California Plug Load Research Center, late April of 2014. There, I worked on the project Painbuddy using animation and 3D modeling software such as Iclone, 3dXchange, and Autodesk 3DS max to create and animate a child-friendly avatar for an application. This app is designed to interface with children and allow medical staff to record children's responses twice a day by having children enter their responses with this application. My primary focus on this project aside from creating animations was to also supervise the team in the development of this project in the Unity game engine.
- [short snippet about what Calplug is]
-
- </p>
-<li>Video Game Development Club (VGDC) @ UCI - Vice President</li>
-<p> I served as a Production and Strategic Initiatives officer of this club prior to being elected the Vice President of the Video Game Development Club. I have been involved with this club since my freshman year, and I have arranged for talks from game industry developers, planned workshops, and obtained opportunities for VGDC while networking with other computing/engineering clubs. My most recent endeavors include arranging for a nearly VGDC exclusive testing session of Firefall, a MMO-Shooter from Red 5 Studios, and inviting Scott Rudi, a lead designer from Red 5, to talk to club members about game design and industry life. 
-
-[short blurb of VGDC]
-
-<li>Taiwanese American Organization (TAO) @ UCI - Webmaster</li>
-<p> As webmaster, I was given the task of redesigning the TAO website from scratch, as well as managing all club surveys, applications, and officer emails from our domain. My duties also include keeping the website updated, posting updates, and working with the Social Chair and Public Relations Chair to market our organization.
-	
-[short blurb of TAO]
-
-</p>
-<li>HackUCI - Organizer
-</ul>
-
-</p>
 <br> 
 <br>
 <br>
 
-<header>
-<h2 id="s4">Resume & Linkedin</h2>
-</header>
-<p> You can view my resume here: 
-<br>You can also find me on Linkedin:
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>	
-</p>
-
-
-<br>
-<br>
-<br>
 
 <header>
-<h2 id="s5">Contact Me!</h2>
+<h2 id="s4">Contact Me!</h2>
 </header>
 <p> You can reach me at jchiu5@uci.edu, I check my email daily. Alternatively, you may fill out the form below: 
 <br>
@@ -237,7 +188,7 @@ border: 1px solid red;
 
 
 
-  <!-- SlidesJS Required: Link to jQuery -->
+ 
   <!-- We'll be using this copy of jQuery -->
   <!-- Note: 2.1.1 is incompatible with IE 6/7/8, but oh well! -->
   <script src="jquery-2.1.1.js"></script>
