--- a/index.html
+++ b/index.html
@@ -192,6 +192,10 @@ border: 1px solid red;
   <!-- We'll be using this copy of jQuery -->
   <!-- Note: 2.1.1 is incompatible with IE 6/7/8, but oh well! -->
   <script src="jquery-2.1.1.js"></script>
+  <script type='text/javascript' src='jquery.scrollTo-1.4.13/jquery.scrollTo-1.4.13/jquery.scrollTo.js'></script>
+  <!-- Trying out scrollTo here -->
+
+
 
 
  
