--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ border: 1px solid red;
       <li class="lispecial"><a href="#s1">About Me</a></li>
       <li class="lispecial"><a href="#s2">Projects</a></li>
       <li class="lispecial"><a href="#s3">Skills and Resume</a></li>
-      <li class="lispecial"><a href="#s4">Contact Me</a></li>
+      <li class="lispecial"><a href="#">Contact Me</a></li>
     </ul>
  
     <h1>Jason Chiu</h1>
@@ -171,7 +171,7 @@ border: 1px solid red;
 
 
 <header>
-<h2 id="s4">Contact Me!</h2>
+<h2 id="s4">Contact Me</h2>
 </header>
 <p> You can reach me at jchiu5@uci.edu, I check my email daily. Alternatively, you may fill out the form below: 
 <br>
