--- a/index.html
+++ b/index.html
@@ -191,8 +191,10 @@ border: 1px solid red;
  
   <!-- We'll be using this copy of jQuery -->
   <!-- Note: 2.1.1 is incompatible with IE 6/7/8, but oh well! -->
-  <script src="jquery/jquery-2.1.1.js"></script>
-  <script type='text/javascript' src='jquery.scrollTo-1.4.13/jquery.scrollTo-1.4.13/jquery.scrollTo.js'></script>
+  <script type='text/javascript' src="jquery/jquery-2.1.1.js"></script>
+  <script type='text/javascript' src='scrollTo/1.4.13/jquery.scrollTo.js'></script>
+  <script type='text/javascript' src='scrollTo/1.4.13/jquery.serialScroll-min.js?1.2.4'></script>
+  <script type='text/javascript' src='scrollTo/1.4.13/init.js'></script>
   <!-- Trying out scrollTo here -->
 
 
