--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
 <head>
 
 
+  <!-- We'll be using this copy of jQuery -->
+  <!-- Note: 2.1.1 is incompatible with IE 6/7/8, but oh well! -->
+  <!--
+  <script type='text/javascript' src="jquery/jquery-2.1.1.js"></script>
+  -->
+  <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js'></script>
+  <script type='text/javascript' src='scrollTo/1.4.13/jquery.scrollTo.js'></script>
+  <script type='text/javascript' src='scrollTo/1.4.13/jquery.serialScroll-min.js?1.2.4'></script>
+  <script type='text/javascript' src='scrollTo/1.4.13/init.js'></script>
+  <!-- Trying out scrollTo here -->
+
+
+
 <style>
 
 <!-- Londrina Shadow -->
@@ -171,7 +184,7 @@ border: 1px solid red;
 
 
 <header>
-<h2 id="s4">Contact Me</h2>
+<h2>Contact Me</h2>
 </header>
 <p> You can reach me at jchiu5@uci.edu, I check my email daily. Alternatively, you may fill out the form below: 
 <br>
@@ -189,13 +202,6 @@ border: 1px solid red;
 
 
  
-  <!-- We'll be using this copy of jQuery -->
-  <!-- Note: 2.1.1 is incompatible with IE 6/7/8, but oh well! -->
-  <script type='text/javascript' src="jquery/jquery-2.1.1.js"></script>
-  <script type='text/javascript' src='scrollTo/1.4.13/jquery.scrollTo.js'></script>
-  <script type='text/javascript' src='scrollTo/1.4.13/jquery.serialScroll-min.js?1.2.4'></script>
-  <script type='text/javascript' src='scrollTo/1.4.13/init.js'></script>
-  <!-- Trying out scrollTo here -->
 
 
 
