--- a/index.html
+++ b/index.html
@@ -4,16 +4,6 @@
 <head>
 
 
-  <!-- We'll be using this copy of jQuery -->
-  <!-- Note: 2.1.1 is incompatible with IE 6/7/8, but oh well! -->
-  <!--
-  <script type='text/javascript' src="jquery/jquery-2.1.1.js"></script>
-  -->
-  <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js'></script>
-  <script type='text/javascript' src='scrollTo/1.4.13/jquery.scrollTo.js'></script>
-  <script type='text/javascript' src='scrollTo/1.4.13/jquery.serialScroll-min.js?1.2.4'></script>
-  <script type='text/javascript' src='scrollTo/1.4.13/init.js'></script>
-  <!-- Trying out scrollTo here -->
 
 
 
@@ -139,7 +129,7 @@ border: 1px solid red;
       <li class="lispecial"><a href="#s1">About Me</a></li>
       <li class="lispecial"><a href="#s2">Projects</a></li>
       <li class="lispecial"><a href="#s3">Skills and Resume</a></li>
-      <li class="lispecial"><a href="#">Contact Me</a></li>
+      <li class="lispecial"><a href="#s4">Contact Me</a></li>
     </ul>
  
     <h1>Jason Chiu</h1>
@@ -184,7 +174,7 @@ border: 1px solid red;
 
 
 <header>
-<h2>Contact Me</h2>
+<h2 id="s4>"Contact Me</h2>
 </header>
 <p> You can reach me at jchiu5@uci.edu, I check my email daily. Alternatively, you may fill out the form below: 
 <br>
@@ -201,12 +191,37 @@ border: 1px solid red;
 
 
 
+   <!-- We'll be using this copy of jQuery -->
+  <!-- Note: 2.1.1 is incompatible with IE 6/7/8, but oh well! -->
+   <!--<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js'></script> -->
+  <script src="/jquery/jquery-2.1.1.js"></script> 
+
+  <script src="smoothScroll/src/jquery.smooth-scroll.js"></script>
+  <script>
+    $(document).ready(function() {
+
+      $('ul.mainnav a').smoothScroll();
+
+      $('p.subnav a').click(function(event) {
+        event.preventDefault();
+        var link = this;
+        $.smoothScroll({
+          scrollTarget: link.hash
+        });
+      });
+
+
+</script>
+
  
 
-
-
-
+  
+  <!--<script type='text/javascript' src='scrollTo/1.4.13/jquery.scrollTo-min.js'></script>-->
+  <!--<script type='text/javascript' src='scrollTo/1.4.13/jquery.serialScroll-min.js?1.2.4'></script>-->
+  <!--<script type='text/javascript' src='scrollTo/1.4.13/init.js'></script>-->
  
+  <!-- Trying out scrollTo here -->
+
 
 
 </body>
