--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ border: 1px solid red;
    <!--<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js'></script> -->
   <script src="/jquery/jquery-2.1.1.js"></script> 
 
-  <script src="smoothScroll/src/jquery.smooth-scroll.js"></script>
+  <script src="/js/smoothScroll/jquery.smooth-scroll.js"></script>
   <script>
     $(document).ready(function() {
 
