Jquery and Jason being dumb
Switched jquery versions to the online one. Found a mistake in one of
the headers.

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ border: 1px solid red;
 
 
 <header>
-<h2 id="s4>"Contact Me</h2>
+<h2 id="s4">Contact Me</h2>
 </header>
 <p> You can reach me at jchiu5@uci.edu, I check my email daily. Alternatively, you may fill out the form below: 
 <br>
@@ -193,8 +193,8 @@ border: 1px solid red;
 
    <!-- We'll be using this copy of jQuery -->
   <!-- Note: 2.1.1 is incompatible with IE 6/7/8, but oh well! -->
-   <!--<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js'></script> -->
-  <script src="/jquery/jquery-2.1.1.js"></script> 
+   <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js'></script>
+  <!-- <script src="/jquery/jquery-2.1.1.js"></script> -->
 
   <script src="/js/smoothScroll/jquery.smooth-scroll.js"></script>
   <script>
