Index.html changes
Began actual content.
Changed it so links are yellow, nav bar is below header and to the left.
For now I plan to just have it floating up there.
I plan to try to include all 4 of the sections in one div and scroll to
them once I learn to use the "scrollTo".

--- a/index.html
+++ b/index.html
@@ -125,18 +125,21 @@ border: 1px solid red;
 
   <header>
   <div class="container">
-    <ul class="mainnav">
+    
+ 
+    <h1>Jason Chiu</h1>
+    <h2>Developer and Organizer</h2>
+
+    </div> 
+    </header>
+
+
+  <ul class="mainnav">
       <li class="lispecial"><a href="#s1">About Me</a></li>
       <li class="lispecial"><a href="#s2">Projects</a></li>
       <li class="lispecial"><a href="#s3">Skills and Resume</a></li>
       <li class="lispecial"><a href="#s4">Contact Me</a></li>
     </ul>
- 
-    <h1>Jason Chiu</h1>
-    <h2></h2>
-
-    </div> 
-    </header>
 
 <div class="about">
 	<header>
