--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ h2 { /* This defines the nature of all the "header 2" portions, which is to say,
 }
 
 
-.mainnav { /* This defines the nature of the lists which will control the nav bar. */
-  text-align: center;
+.mainnava { /* This defines the nature of the lists which will control the nav bar. */
+  text-align: right;
   padding: 10px;
   background: rgba(0,0,0,0.2);
  }
@@ -121,7 +121,7 @@ border: 1px solid red;
 
 </head>
 
-<body>
+<body vlink="yellow" link="yellow">
 
   <header>
   <div class="container">
@@ -134,7 +134,7 @@ border: 1px solid red;
     </header>
 
 
-  <ul class="mainnav">
+  <ul class="mainnava">
       <li class="lispecial"><a href="#s1">About Me</a></li>
       <li class="lispecial"><a href="#s2">Projects</a></li>
       <li class="lispecial"><a href="#s3">Skills and Resume</a></li>
