Wasn't linked up, so I relinked
Seems that the main nav needs to be there. Trying again to see if I can
get down to the issue, but my guess is that the script overrides it.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ h2 { /* This defines the nature of all the "header 2" portions, which is to say,
 }
 
 
-.mainnava { /* This defines the nature of the lists which will control the nav bar. */
+.mainnav { /* This defines the nature of the lists which will control the nav bar. */
   text-align: right;
   padding: 10px;
   background: rgba(0,0,0,0.2);
@@ -134,7 +134,7 @@ border: 1px solid red;
     </header>
 
 
-  <ul class="mainnava">
+  <ul class="mainnav">
       <li class="lispecial"><a href="#s1">About Me</a></li>
       <li class="lispecial"><a href="#s2">Projects</a></li>
       <li class="lispecial"><a href="#s3">Skills and Resume</a></li>
