--- a/index.html
+++ b/index.html
@@ -46,14 +46,15 @@ h2 { /* This defines the nature of all the "header 2" portions, which is to say,
   margin-top: 20px;
   text-align: center; /* centers the header 2 */
   color: #bbbbbb;
-  margin: 0px 0 70px 0;
+  margin: 0px 0 5px 0;
 }
 
 
 .mainnav { /* This defines the nature of the lists which will control the nav bar. */
   text-align: right;
-  padding: 10px;
+  padding: 15px;
   background: rgba(0,0,0,0.2);
+  margin-right: -300px;
  }
 
 .lispecial { /* This defines the nature of all the list items in the nav , which in this case I want the list items to be centered.  */
