--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@ margin: 0 auto;
 
 }
 
+subheader{
+
+text-align: left;
+margin: 0 auto;
+
+}
+
 p{
 
 text-align: center;
@@ -54,7 +61,7 @@ h2 { /* This defines the nature of all the "header 2" portions, which is to say,
   text-align: right;
   padding: 15px;
   background: rgba(0,0,0,0.2);
-  margin-right: -300px;
+  margin-left: -300px;
  }
 
 .lispecial { /* This defines the nature of all the list items in the nav , which in this case I want the list items to be centered.  */
@@ -129,11 +136,15 @@ border: 1px solid red;
     
  
     <h1>Jason Chiu</h1>
-    <h2>Developer and Organizer</h2>
+   
+
+    
 
     </div> 
-    </header>
-
+</header>
+<subheader>
+ <h2>Developer and Organizer</h2>
+ </subheader>
 
   <ul class="mainnav">
       <li class="lispecial"><a href="#s1">About Me</a></li>
