Subheader wrapped in a container
What it says.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ h2 { /* This defines the nature of all the "header 2" portions, which is to say,
   text-align: right;
   padding: 15px;
   background: rgba(0,0,0,0.2);
-  margin-left: -300px;
+  margin-left: 300px;
  }
 
 .lispecial { /* This defines the nature of all the list items in the nav , which in this case I want the list items to be centered.  */
@@ -142,10 +142,11 @@ border: 1px solid red;
 
     </div> 
 </header>
+ <div class="container">
 <subheader>
  <h2>Developer and Organizer</h2>
  </subheader>
-
+</div>
   <ul class="mainnav">
       <li class="lispecial"><a href="#s1">About Me</a></li>
       <li class="lispecial"><a href="#s2">Projects</a></li>
