Made subheader a div class

--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@ border: 1px solid red;
 
 
 
-   <subheader>
+   <div class="subheader">
    <div class="container">
    <h2>Developer and Organizer</h2>
   </div>
-</subheader>
+  </div>
 
 <div class="container">
   <ul class="mainnav">
