--- a/index.html
+++ b/index.html
@@ -27,12 +27,6 @@ margin: 0 auto;
 
 }
 
-subheader{
-
-text-align: left;
-
-}
-
 p{
 
 text-align: center;
@@ -49,8 +43,9 @@ h1 { /* This defines the nature of all the "header 1" portions, which is to say,
 }
 
 h2 { /* This defines the nature of all the "header 2" portions, which is to say, every h2. */
+  font-family: 'Londrina Shadow', cursive;
   margin-top: 20px;
-  text-align: center; /* centers the header 2 */
+  text-align: left; /* centers the header 2 */
   color: #bbbbbb;
   margin: 0px 0 5px 0;
 }
@@ -60,7 +55,7 @@ h2 { /* This defines the nature of all the "header 2" portions, which is to say,
   text-align: right;
   padding: 15px;
   background: rgba(0,0,0,0.2);
-  margin-left: 300px;
+  margin-left: 600px;
  }
 
 .lispecial { /* This defines the nature of all the list items in the nav , which in this case I want the list items to be centered.  */
@@ -133,16 +128,13 @@ border: 1px solid red;
   <header>
   <div class="container">
     <h1>Jason Chiu</h1>
+     <h2>Developer and Organizer</h2>
     </div> 
 </header>
 
 
+ 
 
-   <div class="subheader">
-   <div class="container">
-   <h2>Developer and Organizer</h2>
-  </div>
-  </div>
 
 <div class="container">
   <ul class="mainnav">
