--- a/index.html
+++ b/index.html
@@ -43,9 +43,16 @@ h1 { /* This defines the nature of all the "header 1" portions, which is to say,
 }
 
 h2 { /* This defines the nature of all the "header 2" portions, which is to say, every h2. */
+  margin-top: 20px;
+  text-align: center; /* centers the header 2 */
+  color: #bbbbbb;
+  margin: 0px 0 5px 0;
+}
+
+h3 { /* This defines the nature of all the "header 3" portions, which is to say, every h3. */
   font-family: 'Londrina Shadow', cursive;
   margin-top: 20px;
-  text-align: left; /* centers the header 2 */
+  text-align: left; /* makes the header 3 swing to the left */
   color: #bbbbbb;
   margin: 0px 0 5px 0;
 }
@@ -55,7 +62,7 @@ h2 { /* This defines the nature of all the "header 2" portions, which is to say,
   text-align: right;
   padding: 15px;
   background: rgba(0,0,0,0.2);
-  margin-left: 600px;
+  margin-left: 550px;
  }
 
 .lispecial { /* This defines the nature of all the list items in the nav , which in this case I want the list items to be centered.  */
@@ -63,6 +70,27 @@ h2 { /* This defines the nature of all the "header 2" portions, which is to say,
     padding: 0px 10px 0px 10px;
     /* This is generally bad since I might need to have unordered lists later on. I should be making a div class for this but I'll let this slide for now. */
 }
+
+
+    #navdiv1 {
+
+
+     border: 1px solid green;
+     display: inline-block;
+    width:500px;
+    height:200px;
+    
+
+ 
+}
+  #navdiv2 {
+ border: 1px solid green;
+    vertical-align:top;
+    display: inline-block;
+    width:390px;
+    height:300px;
+}
+
 
 a{ /* This defines the nature of all the hyperlinks */
 	text-decoration: none; /* Remove the underline of the hyperlinks */
@@ -128,7 +156,6 @@ border: 1px solid red;
   <header>
   <div class="container">
     <h1>Jason Chiu</h1>
-     <h2>Developer and Organizer</h2>
     </div> 
 </header>
 
@@ -136,7 +163,11 @@ border: 1px solid red;
  
 
 
-<div class="container">
+<div class="wrapper">
+  <div id="navdiv1">
+ <h2>Developer and Organizer</h2>
+</div>
+<div id="navdiv2">
   <ul class="mainnav">
       <li class="lispecial"><a href="#s1">About Me</a></li>
       <li class="lispecial"><a href="#s2">Projects</a></li>
@@ -144,6 +175,7 @@ border: 1px solid red;
       <li class="lispecial"><a href="#s4">Contact Me</a></li>
     </ul>
   </div>
+</div>
 
 <div class="about">
 	<header>
