--- a/index.html
+++ b/index.html
@@ -64,14 +64,13 @@ border: 1px solid red;
 
 .mainnav { /* This defines the nature of the lists which will control the nav bar. */
   text-align: right;
-  padding: 15px;
+  padding: 7px;
   background: rgba(0,0,0,0.2);
-  margin-left: 0px;
  }
 
 .lispecial { /* This defines the nature of all the list items in the nav , which in this case I want the list items to be centered.  */
     display: inline;
-    padding: 0px 10px 0px 10px;
+    padding: 0px 7px 0px 10px;
     /* This is generally bad since I might need to have unordered lists later on. I should be making a div class for this but I'll let this slide for now. */
 }
 
@@ -80,15 +79,15 @@ border: 1px solid red;
        background: rgba(0,0,0,0.2);
      border: 1px solid green;
      display: inline-block;
-    width:550px;
+    width:450px;
     height:50px;
   }
   #navdiv2 {
     border: 1px solid green;
     vertical-align:top;
     display: inline-block;
-    width:400px;
-    height:70px;
+    width:500px;
+    height:50px;
 }
 
 
@@ -163,13 +162,13 @@ border: 1px solid red;
 
 <div id="wrapper">
   <div id="navdiv1">
- <h2>Developer and Organizer</h2>
+ <h3>Developer and Organizer</h3>
 </div>
 <div id="navdiv2">
   <ul class="mainnav">
       <li class="lispecial"><a href="#s1">About Me</a></li>
       <li class="lispecial"><a href="#s2">Projects</a></li>
-      <li class="lispecial"><a href="#s3">Skills and Resume</a></li>
+      <li class="lispecial"><a href="#s3">Skills/Resume</a></li>
       <li class="lispecial"><a href="#s4">Contact Me</a></li>
     </ul>
   </div>
