--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ border: 1px solid red;
 
 .lispecial { /* This defines the nature of all the list items in the nav , which in this case I want the list items to be centered.  */
     display: inline;
-    padding: 0px 7px 0px 10px;
+    padding: 0px 7px 0px 0px;
     /* This is generally bad since I might need to have unordered lists later on. I should be making a div class for this but I'll let this slide for now. */
 }
 
@@ -77,11 +77,12 @@ border: 1px solid red;
     #navdiv1 {
        background: rgba(0,0,0,0.2);
      border: 1px solid green;
-    
+     display: inline-block;
     width:450px;
     height:50px;
   }
   #navdiv2 {
+    background: rgba(0,0,0,0.8);
     border: 1px solid green;
     vertical-align:top;
     display: inline-block;
