placeholders and stuff for about

--- a/index.html
+++ b/index.html
@@ -174,14 +174,25 @@ border: 1px solid red;
   </div>
 </div>
 
+
+<br>
+<br>
+<br>
+
+
+
 <div class="about">
 	<header>
 	<h2 id="s1">About Jason</h2>
 	</header>
 
 	<div id="wrapper">
-	<div id="aboutdiv1"></div>
-	<div id="aboutdiv2"></div>
+	<div id="aboutdiv1">
+   <img src="smiley.gif" alt="Smiley face" height="300" width="300"> 
+  </div>
+	<div id="aboutdiv2">
+   <p> insert meaningful text here! </p> 
+  </div>
 	</div>
 	</div>
 
