added myself instead because im fab.

--- a/index.html
+++ b/index.html
@@ -188,7 +188,8 @@ border: 1px solid red;
 
 	<div id="wrapper">
 	<div id="aboutdiv1">
-   <img src="smiley.gif" alt="Smiley face" height="300" width="300"> 
+  <a href="http://imgur.com/NKkat75"><img src="http://i.imgur.com/NKkat75.png"/></a>
+ 
   </div>
 	<div id="aboutdiv2">
    <p> insert meaningful text here! </p> 
