--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <!-- Londrina Shadow -->
 <link href='https://fonts.googleapis.com/css?family=Londrina+Shadow' rel='stylesheet' type='text/css'>
+<link href="/jqueryui/jquery-ui.css" rel="stylesheet">
 
 <style>
 
@@ -188,7 +189,7 @@ border: 1px solid red;
 
 	<div id="wrapper">
 	<div id="aboutdiv1">
-  <a href="http://imgur.com/NKkat75"><img src="http://i.imgur.com/NKkat75.png"/></a>
+
  
   </div>
 	<div id="aboutdiv2">
@@ -206,6 +207,19 @@ border: 1px solid red;
 <header>
 <h2 id="s2">Projects</h2>
 </header>
+
+
+<h2>Tabs</h2>
+<div id="tabs">
+  <ul>
+    <li><a href="#tabs-1">First</a></li>
+    <li><a href="#tabs-2">Second</a></li>
+    <li><a href="#tabs-3">Third</a></li>
+  </ul>
+  <div id="tabs-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+  <div id="tabs-2">Phasellus mattis tincidunt nibh. Cras orci urna, blandit id, pretium vel, aliquet ornare, felis. Maecenas scelerisque sem non nisl. Fusce sed lorem in enim dictum bibendum.</div>
+  <div id="tabs-3">Nam dui erat, auctor a, dignissim quis, sollicitudin eu, felis. Pellentesque nisi urna, interdum eget, sagittis et, consequat vestibulum, lacus. Mauris porttitor ullamcorper augue.</div>
+</div>
 
 
 <br>
@@ -239,7 +253,7 @@ border: 1px solid red;
 
 
 
-   <!-- We'll be using this copy of jQuery -->
+   <!-- We'll be using this copy of jQuery for the smoothScroll  -->
   <!-- Note: 2.1.1 is incompatible with IE 6/7/8, but oh well! -->
    <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js'></script>
   <!-- <script src="/jquery/jquery-2.1.1.js"></script> -->
@@ -260,6 +274,17 @@ border: 1px solid red;
 });
 
 </script>
+
+
+<script src="/jqueryui/jquery-ui.js"></script>
+<script>
+
+$( "#tabs" ).tabs();
+
+
+</script>
+
+
 
  
 
