Rolled it back. Trying a better approach.
Utterly caused the flames of hell to wash over.
Reverting..

--- a/index.html
+++ b/index.html
@@ -252,32 +252,16 @@ border: 1px solid red;
 </div>
 
 
-<h2>Dialog with nested tabs</h2>
+
+
+<h2>Dialog</h2>
 <div>
-<p><a href="#" id="dialog-link" class="ui-state-default ui-corner-all">Open SHEER happiness</a></p>
+<p><a href="#" id="dialog-link" class="ui-state-default ui-corner-all">Open more Happiness</a></p>
 </div>
 <!-- ui-dialog -->
 <div id="dialog" title="Dialog Title">
-<p>Lorem lorem idk what that even is. behold the power of nesting.</p>
-
-<h2>Tabs</h2>
-<div id="tabs">
-  <ul>
-    <li><a href="#tabs-1">First</a></li>
-    <li><a href="#tabs-2">Second</a></li>
-    <li><a href="#tabs-3">Third</a></li>
-  </ul>
-  <div id="tabs-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
-  <div id="tabs-2">Phasellus mattis tincidunt nibh. Cras orci urna, blandit id, pretium vel, aliquet ornare, felis. Maecenas scelerisque sem non nisl. Fusce sed lorem in enim dictum bibendum.</div>
-  <div id="tabs-3">Nam dui erat, auctor a, dignissim quis, sollicitudin eu, felis. Pellentesque nisi urna, interdum eget, sagittis et, consequat vestibulum, lacus. Mauris porttitor ullamcorper augue.</div>
+<p>Lorem lorem LORAXXXXX.</p>
 </div>
-
-
-
-</div>
-
-
-
 
 
 
