Began general format of site.
Allocated 4 tabs, labeled them. Trying to see if I can use elements
inside the tabs.

--- a/index.html
+++ b/index.html
@@ -175,16 +175,17 @@ border: 1px solid red;
   <header>
   <div class="container">
     <h1>Jason Chiu</h1>
+     <h3>Developer and Organizer</h3>
     </div> 
 </header>
 
 
  
 
-
+<!--
 <div id="wrapper">
   <div id="navdiv1">
- <h3>Developer and Organizer</h3>
+
 </div>
 <div id="navdiv2">
   <ul class="mainnav">
@@ -195,29 +196,13 @@ border: 1px solid red;
     </ul>
   </div>
 </div>
+-->
 
 
 <br>
 <br>
 <br>
 
-
-
-<div class="about">
-	<header>
-	<h2 id="s1">About Jason</h2>
-	</header>
-
-	<div id="wrapper">
-	<div id="aboutdiv1">
-
- 
-  </div>
-	<div id="aboutdiv2">
-   <p> insert meaningful text here! </p> 
-  </div>
-	</div>
-	</div>
 
 
 <br>
@@ -233,13 +218,41 @@ border: 1px solid red;
 <h2>Tabs</h2>
 <div id="tabs">
   <ul>
-    <li><a href="#tabs-1">First</a></li>
-    <li><a href="#tabs-2">Second</a></li>
-    <li><a href="#tabs-3">Third</a></li>
+    <li><a href="#tabs-1">About</a></li>
+    <li><a href="#tabs-2">Resume</a></li>
+    <li><a href="#tabs-3">Projects</a></li>
+    <li><a href="#tabs-4">Contact</a></li>
   </ul>
-  <div id="tabs-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
-  <div id="tabs-2">Phasellus mattis tincidunt nibh. Cras orci urna, blandit id, pretium vel, aliquet ornare, felis. Maecenas scelerisque sem non nisl. Fusce sed lorem in enim dictum bibendum.</div>
+  <div id="tabs-1">
+
+          <div class="about">
+            <header>
+            <h2 id="s1">About Jason</h2>
+            </header>
+
+            <div id="wrapper">
+            <div id="aboutdiv1">
+
+           
+            </div>
+            <div id="aboutdiv2">
+             <p> insert meaningful text here! </p> 
+            </div>
+            </div>
+            </div>
+  </div>
+  <div id="tabs-2">Phasellus mattis tincidunt nibh. Cras orci urna, blandit id, pretium vel, aliquet ornare, felis. Maecenas scelerisque sem non nisl. Fusce sed lorem in enim dictum bibendum.
+
+
+<h2>Dialog</h2>
+<div>
+<p><a href="#" id="dialog-link2" class="ui-state-default ui-corner-all">Open more Happiness</a></p>
+</div>
+
+
+  </div>
   <div id="tabs-3">Nam dui erat, auctor a, dignissim quis, sollicitudin eu, felis. Pellentesque nisi urna, interdum eget, sagittis et, consequat vestibulum, lacus. Mauris porttitor ullamcorper augue.</div>
+  <div id="tabs-4">Nam dui erat, auctor a, dignissim quis, sollicitudin eu, felis. Pellentesque nisi urna, interdum eget, sagittis et, consequat vestibulum, lacus. Mauris porttitor ullamcorper augue.</div>
 </div>
 
 <h2>Dialog</h2>
@@ -261,17 +274,6 @@ border: 1px solid red;
 <!-- ui-dialog -->
 <div id="dialog2" title="Dialog Titlesss">
 <p>Lorem lorem LORAXXXXX.</p>
-<div id="tabs">
-  <ul>
-    <li><a href="#tabs-1">First</a></li>
-    <li><a href="#tabs-2">Second</a></li>
-    <li><a href="#tabs-3">Third</a></li>
-  </ul>
-  <div id="tabs-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
-  <div id="tabs-2">Phasellus mattis tincidunt nibh. Cras orci urna, blandit id, pretium vel, aliquet ornare, felis. Maecenas scelerisque sem non nisl. Fusce sed lorem in enim dictum bibendum.</div>
-  <div id="tabs-3">Nam dui erat, auctor a, dignissim quis, sollicitudin eu, felis. Pellentesque nisi urna, interdum eget, sagittis et, consequat vestibulum, lacus. Mauris porttitor ullamcorper augue.</div>
-</div>
-
 
 </div>
 
