--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@ h3 { /* This defines the nature of all the "header 3" portions, which is to say,
 }
 
 .frame {
+  padding-left: 100px;
   height: 200px;
   width: 200px;
   background-size: cover; 
@@ -128,10 +129,11 @@ a{ /* This defines the nature of all the hyperlinks */
     #aboutdiv1 {
 
 
+
      border: 1px solid green;
      display: inline-block;
-    width:390px;
-    height:300px;
+    width:250px;
+    height:350px;
     
 
  
