--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
 
+
 <head>
-
-
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="Jason Chiu : Portfolio Site">
 
 <!-- Londrina Shadow -->
 <link href='https://fonts.googleapis.com/css?family=Londrina+Shadow' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css"> <!-- May be useful to keep this in future ones! -->
 <link href="/jqueryui/jquery-ui.css" rel="stylesheet">
+
+
+  <title>Jason Chiu</title>
 
 <style>
 
