Added in the custom divs from the pages
This should apply the header wrap to the top and the footer wrap on the
bottom.

--- a/index.html
+++ b/index.html
@@ -159,35 +159,15 @@ a{ /* This defines the nature of all the hyperlinks */
 
 <body vlink="yellow" link="yellow">
 
-  <header>
-  <div class="container">
-    <h1>Jason Chiu</h1>
-     <h3>Developer and Organizer</h3>
-    </div> 
-</header>
-
-
- 
-
-<!--
-<div id="wrapper">
-  <div id="navdiv1">
-
-</div>
-<div id="navdiv2">
-  <ul class="mainnav">
-      <li class="lispecial"><a href="#s1">About Me</a></li>
-      <li class="lispecial"><a href="#s2">Projects</a></li>
-      <li class="lispecial"><a href="#s3">Skills/Resume</a></li>
-      <li class="lispecial"><a href="#s4">Contact Me</a></li>
-    </ul>
-  </div>
-</div>
--->
+<div id="header_wrap" class="outer">
+        <header class="inner">
+          <h1 id="project_title">Jason Chiu</h1>
+          <h2 id="project_tagline">Developer and Organizer</h2>
+        </header>
+    </div>
 
 
 
-<h2>Tabs</h2>
 <div id="tabs">
   <ul>
     <li><a href="#tabs-1">About</a></li>
@@ -311,6 +291,16 @@ NOXUS!
 <br>
 <br>
 <br>
+
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">This website is maintained by Jason, aka <a href="https://github.com/foreza">foreza</a></p>
+        <p>Published with love from <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
 
 
 
