Footer was there, changing BG color
F8F8FF

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body {
   font-family: helvetica, sans-serif; /* Feel free to change to custom fonts, change this above */
   margin: 0 auto; /* This snippet always keeps the body centered, don't change it unless you really have to. */
   max-width: 1000px; /* Setting max width to 1200 px */ 
-  background: #232323; /* Change to background image if you need to */
+  background: #F8F8FF ; /* Change to background image if you need to */
 }
 
 header{
@@ -252,12 +252,6 @@ NOXUS!
 </p>
 
 </div>
-
-
-
-<header>
-<h2 id="s4">Contact Me</h2>
-</header>
 
 
 
