--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ a{ /* This defines the nature of all the hyperlinks */
  border: 1px solid green;
     vertical-align:top;
     display: inline-block;
-    width:390px;
+    width: auto;
     height:300px;
 }
 
@@ -196,7 +196,7 @@ a{ /* This defines the nature of all the hyperlinks */
            
             </div>
             <div id="aboutdiv2">
-             I'm Jason, and this is my simple description.  
+             I'm Jason, and this is my simple description. I'm Jason, and this is my simple description. I'm Jason, and this is my simple description. I'm Jason, and this is my simple description. I'm Jason, and this is my simple description. I'm Jason, and this is my simple description. I'm Jason, and this is my simple description. I'm Jason, and this is my simple description. I'm Jason, and this is my simple description. I'm Jason, and this is my simple description. I'm Jason, and this is my simple description. I'm Jason, and this is my simple description. I'm Jason, and this is my simple description. I'm Jason, and this is my simple description. I'm Jason, and this is my simple description. I'm Jason, and this is my simple description. I'm Jason, and this is my simple description. I'm Jason, and this is my simple description. I'm Jason, and this is my simple description. I'm Jason, and this is my simple description. I'm Jason, and this is my simple description. I'm Jason, and this is my simple description. I'm Jason, and this is my simple description. I'm Jason, and this is my simple description. I'm Jason, and this is my simple description. I'm Jason, and this is my simple description. I'm Jason, and this is my simple description. I'm Jason, and this is my simple description. I'm Jason, and this is my simple description. I'm Jason, and this is my simple description. I'm Jason, and this is my simple description. I'm Jason, and this is my simple description. 
             </div>
             </div>
             </div>
