--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@ a{ /* This defines the nature of all the hyperlinks */
 }
 	#aboutdiv2 {
  border: 1px solid green;
+ word-wrap: break-word; /* should stop words from overflowing? */ 
     vertical-align:top;
     display: inline-block;
     width: auto;
