--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ h1 { /* This defines the nature of all the "header 1" portions, which is to say,
 h2 { /* This defines the nature of all the "header 2" portions, which is to say, every h2. */
   margin-top: 20px;
   text-align: center; /* centers the header 2 */
-  color: #bbbbbb;
+  color: #696969;
   margin: 0px 0 5px 0;
 }
 
@@ -106,7 +106,6 @@ h3 { /* This defines the nature of all the "header 3" portions, which is to say,
 
 
 #wrapper {
-border: 1px solid red;
 }
 
 
@@ -133,9 +132,8 @@ a{ /* This defines the nature of all the hyperlinks */
 
     #aboutdiv1 {
 
-
+      /* change the picture in the "webmaster" class */
       padding: 20px 20px 20px 20px;
-     border: 1px solid green;
      display: inline-block;
     width:250px;
     height:250px;
@@ -144,7 +142,7 @@ a{ /* This defines the nature of all the hyperlinks */
  
 }
 	#aboutdiv2 {
- border: 1px solid green;
+  padding: 10px;
  max-width: 600px;
  word-wrap: break-word; /* should stop words from overflowing? */ 
     vertical-align:top;
