Trying to do it still.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ margin: 0 auto;
 h1 { /* This defines the nature of all the "header 1" portions, which is to say, every h1. */
   font-family: 'Londrina Shadow', cursive; /* set fonts for header 1 */ 
   text-align: center; /* centers the header 1 */
-  font-size: 75px; 
+  font-size: 100px; 
   color: #aaaaaa;
   margin: 60px 0 0 0; /* margin sets header 60 pixels from top */
 }
@@ -170,7 +170,7 @@ a{ /* This defines the nature of all the hyperlinks */
 
 <div id="tabs">
   <ul>
-    <li><a href="#tabs-1">About</a></li>
+    <li><a href="#tabs-1">Aboutasdfasd</a></li>
     <li><a href="#tabs-2">Resume</a></li>
     <li><a href="#tabs-3">Projects</a></li>
     <li><a href="#tabs-4">Contact</a></li>
