--- a/index.html
+++ b/index.html
@@ -16,39 +16,10 @@
   <title>Jason Chiu</title>
 
 <style>
-
-
-
-body {
-
-  font-family: helvetica, sans-serif; /* Feel free to change to custom fonts, change this above */
-  margin: 0 auto; /* This snippet always keeps the body centered, don't change it unless you really have to. */
-  max-width: 1000px; /* Setting max width to 1200 px */ 
-  background: #F8F8FF ; /* Change to background image if you need to */
-}
-
-header{
-
-text-align: center;
-margin: 0 auto;
-
-}
-
-p{
-
-text-align: center;
-margin: 0 auto;
-
-}
-
-h1 { /* This defines the nature of all the "header 1" portions, which is to say, every h1. */
-  font-family: 'Londrina Shadow', cursive; /* set fonts for header 1 */ 
-  text-align: center; /* centers the header 1 */
-  font-size: 100px; 
-  color: #aaaaaa;
-  margin: 60px 0 0 0; /* margin sets header 60 pixels from top */
-}
-
+body {/* Moved to css stylesheet */}
+header{ /* removed so it doesn't overlap with css stylesheet */}
+p{/* removed so it doesn't overlap with css stylesheet*/ } 
+h1 { /* This defines the nature of all the "header 1" portions, which is to say, every h1. *//* Moved to css stylesheet */}
 h2 { /* This defines the nature of all the "header 2" portions, which is to say, every h2. */
   margin-top: 20px;
   text-align: center; /* centers the header 2 */
@@ -170,7 +141,7 @@ a{ /* This defines the nature of all the hyperlinks */
 
 <div id="tabs">
   <ul>
-    <li><a href="#tabs-1">Aboutasdfasd</a></li>
+    <li><a href="#tabs-1">About</a></li>
     <li><a href="#tabs-2">Resume</a></li>
     <li><a href="#tabs-3">Projects</a></li>
     <li><a href="#tabs-4">Contact</a></li>
