Apparently that caused massive problems
Trying to actually put the stylesheet in the html, lets see how that
goes (REVERSING)

--- a/index.html
+++ b/index.html
@@ -17,7 +17,17 @@
   <title>Jason Chiu</title>
 
 <style>
-body {/* Moved to css stylesheet */}
+body {
+   box-sizing: border-box;
+  color:#373737;
+  background: #212121;
+  /*font-size: 16px; */
+  font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  max-width: 1000px; /* Setting max width to 1200 px */ 
+  background: #F8F8FF ; /* Change to background image if you need to */
+  -webkit-font-smoothing: antialiased;
+}
 header{ /* removed so it doesn't overlap with css stylesheet */}
 p{/* removed so it doesn't overlap with css stylesheet*/ } 
 h1 { /* This defines the nature of all the "header 1" portions, which is to say, every h1. *//* Moved to css stylesheet */}
