--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <style>
 body {
    box-sizing: border-box;
+   margin: 0 auto;
   color:#373737;
   background: #212121;
   /*font-size: 16px; */
