--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
 <!-- Londrina Shadow -->
 <link href='https://fonts.googleapis.com/css?family=Londrina+Shadow' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Economica' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" type="text/css" href="/slick/slick/slick.css"/>
 <link href="/jqueryui/jquery-ui.css" rel="stylesheet">
 <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css"> <!-- May be useful to keep this in future ones! -->
 
@@ -31,8 +34,14 @@ body {
 }
 header{ /* removed so it doesn't overlap with css stylesheet */}
 p{/* removed so it doesn't overlap with css stylesheet*/ } 
-h1 { /* This defines the nature of all the "header 1" portions, which is to say, every h1. *//* Moved to css stylesheet */}
+h1 { 
+ font-family: 'Londrina Shadow', cursive; /* set fonts for header 1 SPECIFICALLY */ 
+  text-align: center; /* centers the header 1 */
+  font-size: 900px; 
+  margin: 60px 0 0 0; /* margin sets header 60 pixels from top */
+  }
 h2 { /* This defines the nature of all the "header 2" portions, which is to say, every h2. */
+  font-family: 'Economica', sans-serif;
   margin-top: 20px;
   text-align: center; /* centers the header 2 */
   color: #696969;
@@ -145,7 +154,7 @@ a{ /* This defines the nature of all the hyperlinks */
 <div id="header_wrap" class="outer">
         <header class="inner">
           <h1 id="project_title">Jason Chiu</h1>
-          <h2 id="project_tagline">Developer and Organizer</h2>
+          <h2 id="project_tagline">Programmer. Web Developer. Organizer. Animator. </h2>
         </header>
     </div>
 
