--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ h1 {
   }
 h2 { /* This defines the nature of all the "header 2" portions, which is to say, every h2. */
   font-family: 'Economica', sans-serif;
-  font-size: 100px; 
+  font-size: 50px; 
   margin-top: 20px;
   text-align: center; /* centers the header 2 */
   color: #696969;
@@ -154,7 +154,7 @@ a{ /* This defines the nature of all the hyperlinks */
 
 <div id="header_wrap" class="outer">
         <header class="inner">
-          <h1 id="project_title">Jason Chiu</h1>
+          <h1>Jason Chiu</h1>
           <h2 id="project_tagline">Programmer. Web Developer. Organizer. Animator. </h2>
         </header>
     </div>
