--- a/index.html
+++ b/index.html
@@ -23,22 +23,20 @@
 body {
  
    margin: 0 auto;
-  color:#373737;
-  background: #212121;
-  /*font-size: 16px; */
+  font-size: 16px; 
   font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
   line-height: 1.5;
-  max-width: 1000px; /* Setting max width to 1200 px */ 
   background: #F8F8FF ; /* Change to background image if you need to */
  
 }
 header{ /* removed so it doesn't overlap with css stylesheet */}
 p{/* removed so it doesn't overlap with css stylesheet*/ } 
 h1 { 
+  color: #696969;
  font-family: 'Londrina Shadow', sans-serif; /* set fonts for header 1 SPECIFICALLY */ 
   text-align: center; /* centers the header 1 */
   font-size: 100px; 
-  margin: 60px 0 0 0; /* margin sets header 60 pixels from top */
+  margin: 20px 0 0 0; /* margin sets header 60 pixels from top */
   }
 h2 { /* This defines the nature of all the "header 2" portions, which is to say, every h2. */
   font-family: 'Economica', sans-serif;
@@ -155,7 +153,7 @@ a{ /* This defines the nature of all the hyperlinks */
 <div id="header_wrap" class="outer">
         <header class="inner">
           <h1>Jason Chiu</h1>
-          <h2 id="project_tagline">Programmer. Web Developer. Organizer. Animator. </h2>
+          <h2>Programmer. Web Developer. Animator. Producer.</h2>
         </header>
     </div>
 
